<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.StateFragment">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:useDefaultMargins="true"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/device_id" />
            <TextView
                android:id="@+id/device_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/device_name" />
            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/battery_level" />
            <TextView
                android:id="@+id/battery_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/device_status" />
            <TextView
                android:id="@+id/device_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="20sp"
                android:text="@string/device_features" />
            <TextView
                android:id="@+id/device_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>