<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:useDefaultMargins="true"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textSize="20sp"
            android:text="@string/device_id" />
        <EditText
            android:id="@+id/device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:importantForAutofill="no" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_columnSpan="2"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/ecg" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/ecg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sample_rate" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/ecg_rate">


        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/resolution" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/ecg_res">
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_columnSpan="2"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/acc" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/sample_rate" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/acc_rate">
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/resolution" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/acc_res">
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/range" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/acc_range">
        </RadioGroup>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>